fix the vertical scrollbar appearing

--- a/style.css
+++ b/style.css
@@ -28,11 +28,16 @@ body {
   background-repeat: no-repeat;
   background-size: 100%;
   background-color: var(--pale-blue);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 main {
   width: 100%;
-  min-height: 100vh;
+  flex: 1 1 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
